<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="play_description">Всего 30 секунд для того, чтобы решить простые математические примеры.\nЭто просто.\nУдачи!</string>
    <string name="statistic">Рекорд правильных ответов 0</string>
    <string name="start_play">СТАТЬ УМНЫМ</string>
    <string name="current_statistic">0/0</string>
    <string name="timer">00:00</string>
    <string name="task_example">0+0</string>
    <string name="answer_example">0</string>
    <string name="time_is_over">Время вышло!</string>
    <string name="total_result">Результат: 0\nМаксимальный результат: 0</string>
    <string name="start_over">НАЧАТЬ ЗАНОВО</string>
    <string name="back_to_the_beginning">ВЕРНУТЬСЯ В НАЧАЛО</string>
</resources>