<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <TextView
        android:id="@+id/textViewCurrentStatistic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:text="@string/current_statistic"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/textViewTimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:text="@string/timer"
        android:textSize="50sp"
        android:textColor="#00FF0A"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewCurrentStatistic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_example"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textViewAnswer1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/answer_example"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/textViewAnswer3"
        app:layout_constraintEnd_toStartOf="@id/textViewAnswer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:onClick="onClickAnswer"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/textViewAnswer2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/answer_example"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="#FFC107"
        app:layout_constraintBottom_toTopOf="@+id/textViewAnswer4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewAnswer1"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:onClick="onClickAnswer"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/textViewAnswer3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/answer_example"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="#07F610"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewAnswer4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAnswer1"
        android:onClick="onClickAnswer"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/textViewAnswer4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/answer_example"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="#B38CF8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textViewAnswer3"
        app:layout_constraintTop_toBottomOf="@id/textViewAnswer2"
        android:onClick="onClickAnswer"
        android:clickable="true"
        android:focusable="true"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>